# netconf-polt

./: CMakeLists.txt  COPYRIGHT  Makefile  README.md  RELEASE_NOTES
balapi/: CMakeLists.txt
cli/: CMakeLists.txt  (+2 more)
netconf_server/: CMakeLists.txt  bcmolt_netconf_server.c  start_netconf_server.sh
netconf_server/OB-BAA_scripts/BBWF-2020v2/: 1-create_olt_device.xml  2-infra.xml  3-create_onu_device-2.xml  3-create_onu_device.xml  delete-config-test.xml  delete-config.xml  delete_onu_device.xml  dhcp-server-side-cfg.sh  ob-baa-big-config-olt-2.xml  ob-baa-big-config-olt.xml  ob-baa-big-config-onu.xml
netconf_server/OB-BAA_scripts/OB-BAA-5.1-eOMCI/: 1-create_olt.xml  2-create-infra-std-2.1.xml  3-config-olt.xml  4-forwarding.xml  delete_olt_device.xml
netconf_server/OB-BAA_scripts/OB-BAA-5.1-vOMCI/: 1-create-olt.xml  2-create-infra-std-2.1.xml  3-grpc-settings-olt.xml  4-get-alignment-status-olt.xml  5-network-functions.xml  6-create-onu-use-vomci.xml  7-configure-onu-std-1.0.xml  8-create_onu_on_olt.xml  9-olt-forwarding.xml  delete-olt.xml  delete-onu.xml
netconf_server/OB-BAA_scripts/PON_1_to_1_Services/: .flattened-pom.xml  .project  1-create-olt-edgecore.xml  1-create-olt-local.xml  configuration.txt  delete-interfaces-olt.yc
netconf_server/OB-BAA_scripts/PON_N_to_1_Services/: .flattened-pom.xml  .project  1-create-olt.xml  2-1-add-interfaces-olt.xml  2-2-add-interfaces-onu.xml  5-onu-sub-if-configuration-1.xml  6-create-gem-ports.xml  7.1-configure-N-to-1-sub.xml  7.2-configure-N-to-1-fwddb.xml  7.3-configure-N-to-1-fwd.xml
netconf_server/OB-BAA_scripts/responses/: hello.xml
netconf_server/bbf-vomci-cli-examples/: 1-set-tr451-server.yc  2-add-interfaces-olt.yc  2-add-interfaces-onu.yc
netconf_server/mfc_relay/: CMakeLists.txt  mfc_relay.h  mfc_relay_client.cc  mfc_relay_common.cc  mfc_relay_internal.h
netconf_server/mfc_relay/message_definition/: CMakeLists.txt  control_relay_service.proto
netconf_server/modules/: CMakeLists.txt  b64.c  b64.h  bbf-types.h  bcmolt_netconf_constants.h  bcmolt_netconf_module_init.c  bcmolt_netconf_module_init.h  bcmolt_netconf_module_utils.c  bcmolt_netconf_module_utils.h  bcmolt_netconf_notifications.c  bcmolt_netconf_notifications.h
netconf_server/modules/bbf-mfc/: CMakeLists.txt  bbf-mfc.c  bbf-mfc.h
netconf_server/modules/bbf-vomci/: CMakeLists.txt  bbf-vomci.c  bbf-vomci.h
netconf_server/modules/bbf-xpon/: CMakeLists.txt  bbf-hardware.c  bbf-l2-dhcpv4-relay.c  bbf-link-table.c  bbf-types.h  bbf-xpon-ani-v-enet.c  bbf-xpon-ani.c  bbf-xpon-apply-flow-config.c  bbf-xpon-channel-group.c  bbf-xpon-channel-pair.c  bbf-xpon-channel-partition.c  bbf-xpon-channel-termination.c  bbf-xpon-enet.c  bbf-xpon-forwarder.c  bbf-xpon-gem.c  bbf-xpon-internal.h  bbf-xpon-qos.c  bbf-xpon-tcont.c  bbf-xpon-tm-mgmt.c  bbf-xpon-utils.c  bbf-xpon-v-ani-v-enet.c  bbf-xpon-v-ani.c  bbf-xpon-vlan-subif.c  bbf-xpon-xpon.c  bbf-xpon.c  bbf-xpon.h  bbf-xpon_constants.h  dhcp-relay-utils.c  dhcp-relay-utils.h  dhcp.h
netconf_server/netopeer2-cli_scripts/: 0.1-set-tr451-client.yc  0.1-set-tr451-server.yc  1.1-add-interfaces-olt.yc  1.2-add-interfaces-onu.yc  2-link-interfaces.yc  3.1-add-tconts.yc  3.2-add-gem-ports.yc  4-create-classifiers.yc  5-create-subifs-onu.yc  6-create-subifs-olt.yc  7-add-1-1-forwarders.yc  bbfw-2019-ont.yc  bbwf-2019-olt.yc  bbwf-2019_demo-complete-v4-forwarders.yc  bbwf-2019_demo-complete-v4-interfaces.yc  bbwf_demo-complete-v4.xml  delete-classifiers.yc  delete-gem-ports.yc  delete-interfaces-olt.yc  delete-interfaces-onu.yc  delete-tconts.yc  dhcp-server-side-cfg.sh
netconf_server/netopeer2-cli_scripts/BBWF-2020/: 1-infra.yc  2-config-olt.yc  3-forwarding.yc  4-config-onu.yc
netconf_server/netopeer2-cli_scripts/ether-type-based/: 1-infra.yc  2-config-olt.yc  3-forwarding.yc  4-config-onu.yc  delete-config.yc  flow_config.txt
onu_mgmt/: CMakeLists.txt
onu_mgmt/config/: onu_mgmt_config.ini
onu_mgmt/libomcistack/: CMakeLists.txt  omci_stack_api.c  omci_stack_api.h  omci_stack_buf.h  omci_stack_common.c  omci_stack_common.h  omci_stack_internal.h  omci_stack_me_hdr.h  omci_stack_me_tl_intf.h  omci_stack_protocol_prop.c  omci_stack_protocol_prop.h  omci_stack_rx.c
onu_mgmt/libomcistack/model/: omci_me_datamodel.csv  omci_stack_enc_dec.c  omci_stack_enc_dec.h  omci_stack_model_funcs.c  omci_stack_model_funcs.h  omci_stack_model_ids.h  omci_stack_model_types.h
onu_mgmt/libomcistack/transport/: omci_transport.c  omci_transport.h
onu_mgmt/libomcisvc/: CMakeLists.txt  omci_svc.c  omci_svc.h  omci_svc_adapter_common.h  omci_svc_common.c  omci_svc_common.h  omci_svc_flow.c  omci_svc_flow.h  omci_svc_onu.c  omci_svc_onu.h  omci_svc_remote_proxy_if.c  omci_svc_stubs.c
onu_mgmt/libomcisvc/bcm_adapter/: omci_svc_adapter_bcm_omci.c  omci_svc_adapter_bcm_omci.h
onu_mgmt/libomcisvc/onu_mgmt_migration/: omci_svc_adapt_old_code.h
onu_mgmt/libonumgmt/: CMakeLists.txt  onu_mgmt.c  onu_mgmt.h  onu_mgmt_api.dox  onu_mgmt_stubs.c
onu_mgmt/libonumgmtmodel/: CMakeLists.txt  onu_mgmt_model.dox  onu_mgmt_model_api_structs.h  onu_mgmt_model_funcs.c  onu_mgmt_model_funcs.h  onu_mgmt_model_helpers.h  onu_mgmt_model_ids.h  onu_mgmt_model_internal.h  onu_mgmt_model_metadata.c  onu_mgmt_model_metadata.h  onu_mgmt_model_supporting_structs.h  onu_mgmt_model_supporting_typedefs.h  onu_mgmt_model_tags.h  onu_mgmt_model_types.h
onu_mgmt/libonumgmttest/: CMakeLists.txt  onu_mgmt_test.c  onu_mgmt_test.h
onu_mgmt/tr451_vomci_polt/: CMakeLists.txt  README.md  bcm_tr451_polt.h  bcm_tr451_polt_cli.cc  bcm_tr451_polt_client.cc  bcm_tr451_polt_common.cc  bcm_tr451_polt_internal.h  bcm_tr451_polt_server.cc  class-diagram.uml
onu_mgmt/tr451_vomci_polt/message_definition/: CMakeLists.txt  tr451_vomci_function_sbi_message.proto  tr451_vomci_function_sbi_service.proto  tr451_vomci_sbi_message.proto  tr451_vomci_sbi_service.proto
onu_mgmt/tr451_vomci_polt/polt_daemon/: CMakeLists.txt  bcm_tr451_polt_main.c  start_tr451_polt.sh
onu_mgmt/tr451_vomci_polt/tr451_polt_vendor/: CMakeLists.txt  tr451_polt_for_vendor.h  tr451_polt_vendor.h
(+44 files in other folders)
