# Netconf agent
bcm_make_normal_option(NETCONF_SERVER BOOL "Build NETCONF server" n)
if(NETCONF_SERVER)
    bcm_module_name(bcmolt_netconf_server)
    bcm_module_dependencies(PUBLIC os daemon netconf_modules libyang sysrepo netopeer2 host_api)
    if(NOT OPEN_SOURCE)
        bcm_module_dependencies(PUBLIC os_cli onu_mgmt_cli api_cli)
    endif()
    if(TR451_VOMCI_POLT)
        bcm_module_dependencies(PUBLIC netconf_bbf-polt-vomci)
    endif()
    bcm_module_header_paths(PUBLIC .)
    bcm_module_srcs(bcmolt_netconf_server.c)
    bcm_create_app_target(fs)
    add_dependencies(bcmolt_netconf_server yang-models)
    bcm_add_subdirectory(modules)
    install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/start_netconf_server.sh DESTINATION fs
		PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
endif()
