# Netconf agent
bcm_make_normal_option(NETCONF_SERVER BOOL "Build NETCONF server" n)
if(NETCONF_SERVER)
    bcm_module_name(bcmolt_netconf_server)
    bcm_module_dependencies(PUBLIC os daemon netconf_modules libyang sysrepo netopeer2)
    if(NOT OPEN_SOURCE_SIM)
        bcm_module_dependencies(PUBLIC host_api)
    endif()
    if(NOT OPEN_SOURCE)
        bcm_module_dependencies(PUBLIC os_cli onu_mgmt_cli api_cli)
    endif()
    if(TR451_VOMCI_POLT)
        bcm_module_dependencies(PUBLIC netconf_bbf-polt-vomci)
    endif()
    if(MFC_RELAY)
        bcm_module_dependencies(PUBLIC mfc_relay)
    endif()
    bcm_module_header_paths(PUBLIC .)
    bcm_module_srcs(bcmolt_netconf_server.c)
    bcm_create_app_target(fs)
    add_dependencies(bcmolt_netconf_server yang-models)
    bcm_add_subdirectory(modules)
    if(MFC_RELAY)
        bcm_add_subdirectory(mfc_relay)
    endif()
    install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/start_netconf_server.sh DESTINATION fs
		PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

    bcm_release_install(${CMAKE_INSTALL_PREFIX}/fs/lib RELEASE ${BCM_HOST_IMAGES_RELEASE}/netconf_server)
    bcm_release_install(${CMAKE_INSTALL_PREFIX}/fs/bin RELEASE ${BCM_HOST_IMAGES_RELEASE}/netconf_server)
    bcm_release_install(${CMAKE_INSTALL_PREFIX}/fs/sysrepo RELEASE ${BCM_HOST_IMAGES_RELEASE}/netconf_server)
    bcm_release_install(${CMAKE_INSTALL_PREFIX}/fs/ssl RELEASE ${BCM_HOST_IMAGES_RELEASE}/netconf_server)
    bcm_release_install(${CMAKE_INSTALL_PREFIX}/fs/start_netconf_server.sh RELEASE ${BCM_HOST_IMAGES_RELEASE}/netconf_server)
    bcm_release_install(${CMAKE_INSTALL_PREFIX}/fs/bcmolt_netconf_server RELEASE ${BCM_HOST_IMAGES_RELEASE}/netconf_server)
    bcm_release_install(${CMAKE_CURRENT_SOURCE_DIR}/doc RELEASE ${BCM_HOST_IMAGES_RELEASE}/netconf_server)
endif()
